tests/reference/asr_preprocess-preprocessor20-4100cdf.stderr
C preprocessor error: Unterminated #if
 --> tests/preprocessor20.f90:6:1
  |
6 | #if !defined negative_constant
  | ^ 
